# internal/model/vade_mecum_estatuto.go
@@ -51,3 +51,8 @@ func (v *VadeMecumEstatuto) BeforeCreate(tx *gorm.DB) error {
 	}
 	return nil
 }
+
+type VadeMecumEstatutoGrupoServico struct {
+	NomeCodigo string `json:"nomecodigo"`
+	Titulo     string `json:"titulo"`
+}
